--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -5,11 +5,11 @@
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-.login-container{
+.registro-container{
     box-shadow:0px 10px 12px 0px #634da196;
     padding: 20px; 
     border-radius: 8px; 
-    margin-top: 20px;
+    margin-top: 80px;
     background-color: rgba(231, 217, 18, 0.192);
 }
 
@@ -24,28 +24,23 @@
     align-items: center; /* Centra verticalmente */
     justify-content: center; /* Centra horizontalmente */
     text-align: center; /* Alinea el texto al centro */
-    box-shadow: -25px 0 20px rgba(47, 25, 129, 0.432);
 }
-
-.btn-login, .btn-regresar {
-    background-color: white;
-    color: #a5176b;
-    border-color: #a5176b;
-    transition: transform 0.3s ease, background-color 0.3s ease;
-}
-
-.btn-login:hover , .btn-regresar:hover{
-    transform: scale(1.1);
-    color: #a5176b;
-}
-.nav-registro{
-    border-bottom: solid 3px #a5176b;
+.btn-regresar{
+    color: white;
+    background-color: #a5176b;
 }
 .nav-regresar{
-    padding-top: 25px;
-    margin-top: 15px;
-    padding-left: 40px;
+    width: 100%;
+    height: 100px;
+    padding-left: 50px;
 }
 .container-btn-enviar{
     padding-top: 20px;
+}
+
+.bg-registro{
+    background-color: #a5176b;
+}
+.btn-registro {
+    width: 100%;
 }
